# Tic-Tac-Toe-game

./: CMakeLists.txt  README.md  STD_TYPES.h  main.c
Board/: CMakeLists.txt
Board/inc/: Board.h
Board/src/: Board.c
GameOperations/: CMakeLists.txt
GameOperations/inc/: GameOperations.h
GameOperations/src/: GameOperations.c
MainMenu/: CMakeLists.txt
MainMenu/inc/: MainMenu.h
MainMenu/src/: MainMenu.c
libCUnit/: CMakeLists.txt
libCUnit/inc/: CUnit.h  unitTesting.h
libCUnit/src/: unitTesting.c
